# rust_timer

./: .gitignore  Cargo.toml  README.md  download_icon.py
.gemini/: .env
src/: main.rs
tests/: cli.rs
